--- a/src/_includes/modules/progress-block-bold.html
+++ b/src/_includes/modules/progress-block-bold.html
@@ -7,7 +7,7 @@
                 <span class="dot-line-inner bg-primary-light bg-primary-before brd-primary-light"></span>
             </i>
             <h3 class="h5 m-b">Step 1</h3>
-            <p class="m-b-0">This is where we sit down, grab a cup of coffee and do step 1.</p>
+            <p class="m-b-0">Briefly discuss the step or identify the milestone.</p>
         </div>
         <!-- End Static Process -->
     </div>
@@ -19,7 +19,7 @@
                 <span class="dot-line-inner bg-primary-light bg-primary-before brd-primary-light"></span>
             </i>
             <h3 class="h5 m-b">Step 2</h3>
-            <p class="m-b-0">Now that we've have some ideas, it's time for step 2.</p>
+            <p class="m-b-0">Keep the message clear and concise.</p>
         </div>
         <!-- End Static Process -->
     </div>
@@ -31,7 +31,7 @@
                 <span class="dot-line-inner bg-primary-light bg-primary-before brd-primary-light"></span>
             </i>
             <h3 class="h5 m-b">Step 3</h3>
-            <p class="m-b-0">We begin to visualize concepts and dive into step 3.</p>
+            <p class="m-b-0">Do not link to more information from the tracker.</p>
         </div>
         <!-- End Static Process -->
     </div>
@@ -43,7 +43,7 @@
                 <span class="dot-line-inner bg-grey-light brd-gray-light"></span>
             </i>
             <h3 class="h5 m-b">Step 4</h3>
-            <p class="m-b-0">Your product is all dressed up and ready to go, it's time to do step 4.</p>
+            <p class="m-b-0">Instead, link to additional information in your body content or tracker caption.</p>
         </div>
         <!-- End Static Process -->
     </div>
