--- a/src/_includes/modules/timeline.html
+++ b/src/_includes/modules/timeline.html
@@ -1,10 +1,5 @@
 <!--Experience-->
 <div class="card overflow-visible">
-    <!-- Panel Header -->
-    <div class="card-heading bg-grey-lightest">
-        <h3 class="h4"><span class="ca-gov-icon-briefcase" aria-hidden="true"></span> Experience</h3>
-    </div>
-    <!-- End Panel Header -->
     <!-- Panel Body -->
     <div class="card-block">
         <ul class="row list-unstyled">
@@ -12,8 +7,8 @@
                 <article class="row">
                     <!-- Timeline Date -->
                     <div class="col-md-3 text-md-end p-r-md">
-                        <div class="h5 m-t m-b-0">Project Manager</div>
-                        <div class="h6 m-y-0">2016 - Current</div>
+                        <div class="h5 m-t m-b-0">Step 1. Contributor name</div>
+                        <div class="h6 m-y-0">YY - YY</div>
                     </div>
                     <!-- End Timeline Date -->
                     <!-- Timeline Content -->
@@ -23,11 +18,7 @@
                             <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
                         </div>
                         <!-- End Timeline Dot -->
-
-                        <div class="h4 m-t m-b-0">State of California</div>
-                        <p class="m-b-md">Finally! Johne Doe got his dream job! He can work in the State now for the
-                            rest of his
-                            life.</p>
+                        <p class="m-b-md"><br>Briefly discuss the step or identify the milestone.<br><br><br></p>
 
                     </div>
                     <!-- End Timeline Content -->
@@ -37,8 +28,8 @@
                 <article class="row">
                     <!-- Timeline Date -->
                     <div class="col-md-3  text-md-end p-r-md">
-                        <div class="h5 m-t m-b-0">Full Stack Developer</div>
-                        <div class="h6 m-y-0">2014 - 2016</div>
+                        <div class="h5 m-t m-b-0">Step 2. Contributor name</div>
+                        <div class="h6 m-y-0">YY - YY</div>
                     </div>
                     <!-- End Timeline Date -->
                     <!-- Timeline Content -->
@@ -49,10 +40,7 @@
                         </div>
                         <!-- End Timeline Dot -->
 
-                        <h3 class="h4 m-t m-b-0">Google</h3>
-                        <p class="m-b-md">Winter purslane courgette pumpkin quandong komatsuna fennel green bean
-                            cucumber. Pea
-                            cress potato sprouts wattle seed rutabaga.</p>
+                        <p class="m-b-md"><br>Keep the message clear and concise.<br><br><br></p>
 
                     </div>
                     <!-- End Timeline Content -->
@@ -62,8 +50,8 @@
                 <article class="row">
                     <!-- Timeline Date -->
                     <div class="col-md-3 text-md-end p-r-md">
-                        <h4 class="h5 m-t m-b-0">Frontend Developer</h4>
-                        <h5 class="h6 m-y-0">2012 - 2014</h5>
+                        <div class="h5 m-t m-b-0">Step 3. Contributor name</div>
+                        <div class="h6 m-y-0">YY - YY</div>
                     </div>
                     <!-- End Timeline Date -->
                     <!-- Timeline Content -->
@@ -74,9 +62,7 @@
                         </div>
                         <!-- End Timeline Dot -->
 
-                        <h3 class="h4 m-t m-b-0">Amazon Inc.</h3>
-                        <p class="m-b-md">Winter purslane courgette pumpkin quandong komatsuna fennel green bean
-                            cucumber. Pea cress potato sprouts wattle seed rutabaga.</p>
+                        <p class="m-b-md"><br>Do not link to more information from the tracker.<br><br><br></p>
 
                     </div>
                     <!-- End Timeline Content -->
@@ -86,8 +72,8 @@
                 <article class="row">
                     <!-- Timeline Date -->
                     <div class="col-md-3 text-md-end p-r-md">
-                        <div class="h5 m-t m-b-0">UX/UI Designer</div>
-                        <div class="h6 m-y-0">2010 - 2012</div>
+                        <div class="h5 m-t m-b-0">Step 4. Contributor name</div>
+                        <div class="h6 m-y-0">YY - YY</div>
                     </div>
                     <!-- End Timeline Date -->
                     <!-- Timeline Content -->
@@ -97,9 +83,7 @@
                             <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
                         </div>
                         <!-- End Timeline Dot -->
-                        <div class="h4 m-t m-b-0">Apple Inc.</div>
-                        <p class="m-b-md">Winter purslane courgette pumpkin quandong komatsuna fennel green bean
-                            cucumber. Pea cress potato sprouts wattle seed rutabaga.</p>
+                        <p class="m-b-md"><br>Instead, link to additional information in your body content or tracker caption.<br><br><br></p>
 
                     </div>
                     <!-- End Timeline Content -->
