added what's new page  #216

--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -2,16 +2,16 @@
  <ul id="nav_list" class="top-level-nav">
   <li class="nav-item">
        {% if landing === "Template updates" %}
-       <a class="first-level-link active" href="/updates.html">Template updates</a>
+       <a class="first-level-link active" href="/template-updates.html">Template updates</a>
        {% else %}
-       <a class="first-level-link" href="/updates.html">Template updates</a>
+       <a class="first-level-link" href="/template-updates.html">Template updates</a>
        {% endif %} 
    </li>
    <li class="nav-item">
        {% if landing === "Get started" %}
-       <a class="first-level-link active" href="/getting-started.html">Get started</a>
+       <a class="first-level-link active" href="/get-started.html">Get started</a>
        {% else %}
-       <a class="first-level-link" href="/getting-started.html">Get started</a>
+       <a class="first-level-link" href="/get-started.html">Get started</a>
        {% endif %} 
    </li>
    <li class="nav-item">       
