updated forme elements page adn patterns page #218

--- a/src/_includes/modules/form-label.html
+++ b/src/_includes/modules/form-label.html
@@ -1,5 +1,2 @@
-<h3 class="h4 mt-0">Default</h3>
 <label class="form-control-label" for="InputName">Name</label>
-
-<h3 class="h4">Required</h3>
-<label class="form-control-label" for="InputNameRequired"><span class="required-label">*</span> Name</label>
+<input type="text" class="form-control" id="InputName" placeholder="Enter your name here">
