--- a/src/scss/cagov/forms.scss
+++ b/src/scss/cagov/forms.scss
@@ -10,7 +10,8 @@
 }
 
 label {
-	font-weight: 700;
+	font-weight: 600;
+ font-size: $font-size-regular;
 }
 .input-group-text {
 	border-radius: $border-radius-base;
