--- a/src/_includes/modules/form-textarea.html
+++ b/src/_includes/modules/form-textarea.html
@@ -1,7 +1,6 @@
-<h3 class="h4 mt-0">Default</h3>
 <label class="form-control-label" for="exampleInputComment">Your Message</label>
 <textarea id="exampleInputComment" class="form-control" rows="5" cols="80"></textarea>
-<small>Use this space for error messages or instruction text</small>
+<small>Use this space for error messages or instructions text</small>
 
 <h3 class="h4">Required</h3>
 <label class="form-control-label" for="exampleInputCommentRequired"><span class="required-label">*</span> Your
