updated card grid page #479

--- a/src/_includes/modules/card-grid-images.html
+++ b/src/_includes/modules/card-grid-images.html
@@ -1,33 +1,32 @@
 <div class="row">
  <div class="col-md-4">
-  <a href="/visual-design/color-schemes.html" class="no-underline d-block bg-gray-50 bg-grey-lightest-hover p-a-md"
-   title="Features">
-   <div class="text-center">
-    <img class="image-icon rounded-50x m-b" src="/images/sample/images/features-icon.png" alt="Features icon">
-    <h2 class="h4 m-t-0 m-b-sm color-gray-dark">Features</h2>
-    <p class="color-gray-dark">This template includes 12 color themes and multiple page layouts
-     samples</p>
+  <article class="no-underline d-block bg-gray-50 bg-grey-lightest-hover pos-rel p-b">
+   <img class="img-fluid rounded-4" src="/images/sunflower1.jpg" alt="Image description 1">
+   <div class="p-a-md">
+    <a href="#" class="h4 m-t-0 m-b color-gray-dark link-before text-left no-underline d-block">Card title</a>
+    <p class="color-gray-dark text-left">Briefly tell your reader what they will find at the card's destination then
+     link to that location. </p>
    </div>
-  </a>
+  </article>
  </div>
  <div class="col-md-4">
-  <a href="/accessibility.html" class="no-underline d-block bg-gray-50 bg-grey-lightest-hover p-a-md"
-   title="Accessibility">
-   <div class="text-center">
-    <img class="image-icon rounded-50x m-b" src="/images/sample/images/accessibility-icon.png" alt="Accessibility Icon">
-    <h2 class="h4 m-t-0 m-b-sm color-gray-dark">Accessibility</h2>
-    <p class="color-gray-dark">State Web Template is designed, developed and maintained to be ADA compliant
-    </p>
+  <article class="no-underline d-block bg-gray-50 bg-grey-lightest-hover pos-rel  p-b">
+   <img class="img-fluid rounded-4" src="/images/sunflower2.jpg" alt="Image description 2">
+   <div class="p-a-md">
+    <a href="#" class="h4 m-t-0 m-b color-gray-dark link-before text-left no-underline d-block">Card title</a>
+    <p class="color-gray-dark text-left">Briefly tell your reader what they will find at the card's destination then
+     link to that location. </p>
    </div>
-  </a>
+  </article>
  </div>
  <div class="col-md-4">
-  <a href="/components.html" class="no-underline d-block bg-gray-50 bg-grey-lightest-hover p-a-md" title="Code">
-   <div class="text-center">
-    <img class="image-icon rounded-50x m-b" src="/images/sample/images/code-icon.png" alt="Code icon">
-    <h2 class="h4 m-t-0 m-b-sm color-gray-dark">Code</h2>
-    <p class="color-gray-dark">State Web Template emplate includes over 180 ready to use code samples</p>
+  <article class="no-underline d-block bg-gray-50 bg-grey-lightest-hover pos-rel  p-b">
+   <img class="img-fluid rounded-4" src="/images/sunflower3.jpg" alt="Image description 3">
+   <div class="p-a-md">
+    <a href="#" class="h4 m-t-0 m-b color-gray-dark link-before text-left no-underline d-block">Card title</a>
+    <p class="color-gray-dark text-left">Briefly tell your reader what they will find at the card's destination then
+     link to that location. </p>
    </div>
-  </a>
+  </article>
  </div>
 </div>
