--- a/src/scss/cagov/link-grid.scss
+++ b/src/scss/cagov/link-grid.scss
@@ -29,3 +29,12 @@
   font-size: 1.6rem;
  }
 }
+
+.link-before::before {
+ position: absolute;
+ content: "";
+ width: 100%;
+ height: 100%;
+ top: 0;
+ left: 0;
+}
