--- a/src/_includes/modules/card-grid-icons.html
+++ b/src/_includes/modules/card-grid-icons.html
@@ -1,40 +1,39 @@
 <div class="row">
  <div class="col-md-4">
-  <!-- Icon Blocks -->
-  <a href="/visual-design/color-schemes.html" class="no-underline d-block bg-gray-50 bg-grey-lightest-hover p-a-md"
-   title="Features">
-   <div class="text-center">
-    <span class="ca-gov-icon-features text-4rem d-block" aria-hidden="true"></span>
-    <h2 class="h4 m-t-0 m-b-sm color-gray-dark">Features</h2>
-
-    <p class="color-gray-dark">This template includes 12 color themes and multiple page layouts
+  <!-- Icon Block -->
+  <article class="no-underline d-block bg-gray-50 bg-grey-lightest-hover p-a-md pos-rel">
+   <div class="text-center  p-b">
+    <span class="ca-gov-icon-clipboard color-p2 color-p2-hover text-huge d-block" aria-hidden="true"></span>
+    <a href="/visual-design/icons.html"
+     class="h4 m-t-0 m-b color-gray-dark link-before text-left no-underline d-block">Infographic</a>
+    <p class="color-gray-dark text-left">Commonly recognized by visitors and generally reserved for data-rich
+     visualization.</p>
+   </div>
+  </article>
+  <!-- End Icon Block -->
+ </div>
+ <div class="col-md-4">
+  <!-- Icon Block -->
+  <article class="no-underline d-block bg-gray-50 bg-grey-lightest-hover p-a-md pos-rel">
+   <div class="text-center  p-b">
+    <span class="ca-gov-icon-accessibility color-p2 color-p2-hover text-huge d-block" aria-hidden="true"></span>
+    <a href="#" class="h4 m-t-0 m-b color-gray-dark link-before text-left no-underline d-block">Icons</a>
+    <p class="color-gray-dark text-left">Should be simple and maintain the likeness of the object it represents.
      samples</p>
    </div>
-  </a>
-  <!-- End Icon Blocks -->
+  </article>
+  <!-- End Icon Block -->
  </div>
  <div class="col-md-4">
-  <!-- Icon Blocks -->
-  <a href="/accessibility.html" class="no-underline d-block bg-gray-50 bg-grey-lightest-hover p-a-md"
-   title="Accessibility">
-   <div class="text-center">
-    <span class="ca-gov-icon-accessibility text-4rem d-block" aria-hidden="true"></span>
-    <h2 class="h4 m-t-0 m-b-sm color-gray-dark">Accessibility</h2>
-    <p class="color-gray-dark">State Web Template is designed, developed and maintained to be ADA compliant
+  <!-- Icon Block -->
+  <article class="no-underline d-block bg-gray-50 bg-grey-lightest-hover p-a-md pos-rel">
+   <div class="text-center  p-b">
+    <span class="ca-gov-icon-calendar color-p2 color-p2-hover text-huge d-block" aria-hidden="true"></span>
+    <a href="#" class="h4 m-t-0 m-b color-gray-dark link-before text-left no-underline d-block">Card body</a>
+    <p class="color-gray-dark text-left">This space should quickly describe what visitors will find at the button link.
     </p>
    </div>
-  </a>
-  <!-- End Icon Blocks -->
- </div>
- <div class="col-md-4">
-  <!-- Icon Blocks -->
-  <a href="/components.html" class="no-underline d-block bg-gray-50 bg-grey-lightest-hover p-a-md" title="Code">
-   <div class="text-center">
-    <span class="ca-gov-icon-code text-4rem d-block" aria-hidden="true"></span>
-    <h2 class="h4 m-t-0 m-b-sm color-gray-dark">Code</h2>
-    <p class="color-gray-dark">State Web Template emplate includes over 180 ready to use code samples</p>
-   </div>
-  </a>
-  <!-- End Icon Blocks -->
+  </article>
+  <!-- End Icon Block -->
  </div>
 </div>
