--- a/src/_includes/modules/news-block.html
+++ b/src/_includes/modules/news-block.html
@@ -1,152 +1,103 @@
 <div class="row">
-    <div class="col-md-4 m-b-md">
-        <!-- Article -->
-        <article class="shadow">
-            <figure class="pos-rel m-b-0">
-                <img class="img-fluid w-100" src="/images/sample/images/500x450.jpg" alt="Image Description">
+ <div class="col-md-4 m-b-md">
+  <!-- Article -->
+  <article class="bg-gray-50-hover p-b-md brd-solid-1 brd-gray-light pos-rel">
+   <figure class="pos-rel m-b-0">
+    <img class="img-fluid w-100" src="/images/news-grid1.jpg" alt="Image Description">
+    <figcaption class="pos-abs top-sm p-l-0 rounded-3">
+     <span class="btn btn-sm btn-standout rounded-0" href="#">Month DD, YYYY</span>
+    </figcaption>
+   </figure>
 
-                <figcaption class="pos-abs top-sm left-sm">
-                    <a class="btn btn-sm btn-standout rounded-0" href="#">July 18, 2017</a>
-                </figcaption>
-            </figure>
+   <div class="p-a">
+    <ul class="list-inline small m-y-0">
+     <li class="list-inline-item">
+      <span class="color-gray">By:</span>
+      <span class="color-gray-dark color-primary-hover" href="#">Author</span>
+     </li>
+     <li class="list-inline-item">
+      <span class="color-gray">In:</span>
+      <span class="color-gray-dark color-primary-hover" href="#">Agency</span>
+     </li>
+    </ul>
 
-            <div class="p-a">
-                <ul class="list-inline small m-y-0">
-                    <li class="list-inline-item">
-                        <span class="color-gray">By:</span>
-                        <a class="color-gray-dark color-primary-hover" href="#">Alex</a>
-                    </li>
-                    <li class="list-inline-item">
-                        <span class="color-gray">In:</span>
-                        <a class="color-gray-dark color-primary-hover" href="#">DMV</a>
-                    </li>
-                </ul>
+    <h3 class="h4 m-t-0 m-b-sm">
+     <a class="u-link-v5 color-gray-dark color-primary-hover link-before no-underline" href="#">Short title</a>
+    </h3>
 
-                <h3 class="h4 m-t-0 m-b-sm">
-                    <a class="u-link-v5 color-gray-dark color-primary-hover" href="#">Incredible standard post</a>
-                </h3>
+    <p>Briefly tell your reader what they will find at the card's destination then link to the official news release or
+     news section within your site.</p>
+   </div>
+  </article>
+  <!-- End Article -->
+ </div>
 
-                <p>Nullam elementum tincidunt massa, a pulvinar leo ultricies ut. Ut fringilla lectus tellusimp
-                    imperdiet molestie est volutpat at. Sed viverra cursus nibh.</p>
+ <div class="col-md-4 m-b-md">
+  <!-- Article -->
+  <article class="bg-gray-50-hover p-b-md brd-solid-1 brd-gray-light pos-rel">
+   <figure class="pos-rel m-b-0">
+    <img class="img-fluid w-100" src="/images/news-grid2.jpg" alt="Image description #2">
+    <figcaption class="pos-abs top-sm p-l-0 rounded-3">
+     <span class="btn btn-sm btn-standout rounded-0" href="#">Month DD, YYYY</span>
+    </figcaption>
+   </figure>
 
-                <hr class="hr-light m-y">
+   <div class="p-a">
+    <ul class="list-inline small m-y-0">
+     <li class="list-inline-item">
+      <span class="color-gray">By:</span>
+      <span class="color-gray-dark color-primary-hover" href="#">Author</span>
+     </li>
+     <li class="list-inline-item">
+      <span class="color-gray">In:</span>
+      <span class="color-gray-dark color-primary-hover" href="#">Agency</span>
+     </li>
+    </ul>
 
-                <ul class="list-inline m-y-0">
-                    <li class="list-inline-item m-r m-y-0">
-                        <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#"
-                            aria-label="Email DMV">
-                            <span class="ca-gov-icon-email" aria-hidden="true"></span><span class="sr-only">Email</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item m-r m-y-0">
-                        <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
-                            <span class="ca-gov-icon-share" aria-hidden="true"></span><span class="sr-only">Share</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </article>
-        <!-- End Article -->
-    </div>
+    <h3 class="h4 m-t-0 m-b-sm">
+     <a class="u-link-v5 color-gray-dark color-primary-hover link-before no-underline" href="#">Short title <span
+       class="sr-only">#2</span></a>
+    </h3>
 
-    <div class="col-md-4 m-b-md">
-        <!-- Article -->
-        <article class="shadow">
-            <figure class="pos-rel m-b-0">
-                <img class="img-fluid w-100" src="/images/sample/images/500x450.jpg" alt="Image Description">
+    <p>Briefly tell your reader what they will find at the card's destination then link to the official news release or
+     news section within your site.</p>
+   </div>
+  </article>
+  <!-- End Article -->
+ </div>
 
-                <figcaption class="pos-abs top-sm left-sm">
-                    <a class="btn btn-sm btn-standout rounded-0" href="#">July 12, 2017</a>
-                </figcaption>
-            </figure>
+ <div class="col-md-4 m-b-md">
+  <!-- Article -->
+  <article class="bg-gray-50-hover p-b-md brd-solid-1 brd-gray-light pos-rel">
+   <figure class="pos-rel m-b-0">
+    <img class="img-fluid w-100" src="/images/news-grid3.jpg" alt="Image description #3">
+    <figcaption class="pos-abs top-sm p-l-0 rounded-3">
+     <span class="btn btn-sm btn-standout rounded-0" href="#">Month DD, YYYY</span>
+    </figcaption>
+   </figure>
 
-            <div class="p-a">
-                <ul class="list-inline small m-y-0">
-                    <li class="list-inline-item">
-                        <span class="color-gray">By:</span>
-                        <a class="color-gray-dark color-primary-hover" href="#">Kathy</a>
-                    </li>
-                    <li class="list-inline-item">
-                        <span class="color-gray">In:</span>
-                        <a class="color-gray-dark color-primary-hover" href="#">CDT</a>
-                    </li>
-                </ul>
+   <div class="p-a">
+    <ul class="list-inline small m-y-0">
+     <li class="list-inline-item">
+      <span class="color-gray">By:</span>
+      <span class="color-gray-dark color-primary-hover" href="#">Author</span>
+     </li>
+     <li class="list-inline-item">
+      <span class="color-gray">In:</span>
+      <span class="color-gray-dark color-primary-hover" href="#">Agency</span>
+     </li>
+    </ul>
 
-                <h3 class="h4 m-t-0 m-b-sm">
-                    <a class="u-link-v5 color-gray-dark color-primary-hover" href="#">Demperdiet molesti volutpa</a>
-                </h3>
+    <h3 class="h4 m-t-0 m-b-sm">
+     <a class="u-link-v5 color-gray-dark color-primary-hover link-before no-underline" href="#">Short title <span
+       class="sr-only">#3</span></a>
+    </h3>
 
-                <p>Nullam elementum tincidunt massa, a pulvinar leo ultricies ut. Ut fringilla lectus tellusimp
-                    imperdiet molestie est volutpat at. Sed viverra cursus nibh.</p>
-
-                <hr class="hr-light m-y">
-
-                <ul class="list-inline m-y-0">
-                    <li class="list-inline-item m-r m-y-0">
-                        <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#"
-                            aria-label="Email CDT">
-                            <span class="ca-gov-icon-email" aria-hidden="true"></span><span class="sr-only">Email</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item m-r m-y-0">
-                        <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
-                            <span class="ca-gov-icon-share" aria-hidden="true"></span><span class="sr-only">Share</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </article>
-        <!-- End Article -->
-    </div>
-
-    <div class="col-md-4 m-b-md">
-        <!-- Article -->
-        <article class="shadow">
-            <figure class="pos-rel m-b-0">
-                <img class="img-fluid w-100" src="/images/sample/images/500x450.jpg" alt="Image Description">
-
-                <figcaption class="pos-abs top-sm left-sm">
-                    <a class="btn btn-sm btn-standout rounded-0" href="#">July 07, 2017</a>
-                </figcaption>
-            </figure>
-
-            <div class="p-a">
-                <ul class="list-inline small m-y-0">
-                    <li class="list-inline-item">
-                        <span class="color-gray">By:</span>
-                        <a class="color-gray-dark color-primary-hover" href="#">John</a>
-                    </li>
-                    <li class="list-inline-item">
-                        <span class="color-gray">In:</span>
-                        <a class="color-gray-dark color-primary-hover" href="#">CDTFA</a>
-                    </li>
-                </ul>
-
-                <h3 class="h4 m-t-0 m-b-sm">
-                    <a class="u-link-v5 color-gray-dark color-primary-hover" href="#">Nullam non metus inmi</a>
-                </h3>
-
-                <p>Nullam elementum tincidunt massa, a pulvinar leo ultricies ut. Ut fringilla lectus tellusimp
-                    imperdiet molestie est volutpat at. Sed viverra cursus nibh.</p>
-
-                <hr class="hr-light m-y">
-
-                <ul class="list-inline m-y-0">
-                    <li class="list-inline-item m-r m-y-0">
-                        <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#"
-                            aria-label="Email CDTFA">
-                            <span class="ca-gov-icon-email" aria-hidden="true"></span><span class="sr-only">Email</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item m-r m-y-0">
-                        <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
-                            <span class="ca-gov-icon-share" aria-hidden="true"></span><span class="sr-only">Share</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </article>
-        <!-- End Article -->
-    </div>
+    <p>Briefly tell your reader what they will find at the card's destination then link to the official news release or
+     news section within your site.</p>
+   </div>
+  </article>
+  <!-- End Article -->
+ </div>
 </div>
 <!-- End News Block -->
