fixed the icon form, and form elements

--- a/src/scss/cagov/globals.scss
+++ b/src/scss/cagov/globals.scss
@@ -365,10 +365,16 @@
 .text-muted {
  color: $text-muted !important;
 }
+.outline-color, .outline-color:hover, .outline-color:focus {
+ color: $outline-default-color !important;
+}
 
 // light backgrounds
 .bg-white {
  background-color: $white !important;
+}
+.bg-outline-color, .bg-outline-color:hover, .bg-outline-color:focus {
+background-color: $outline-default-color !important;
 }
 .bg-white-hover:hover,
 .bg-white-hover:focus {
@@ -470,6 +476,8 @@
 .bg-alpha-90 {
  background-color: rgba(0, 0, 0, 0.9) !important;
 }
+
+
 
 /*------------------------------------
   borders colors and styles
