--- a/src/scss/colortheme/oceanside.scss
+++ b/src/scss/colortheme/oceanside.scss
@@ -13,9 +13,9 @@ $color-p2:              #046B99;     // Medium Blue
 $color-p3:              #323A45;     // Dark Blue
 
 // Secondary Theme colors
-$color-s1:              #eef8fb;            // Lightest Blue
-$color-s2:              #9FDBF1;            // Lighter Blue
-$color-s3:              #50aee4;        	// Light Blue $brand-info
+$color-s1:              #eef8fb;         // Lightest Blue
+$color-s2:              #87B8CE;         // Lighter Blue
+$color-s3:              #4993B5;        	// Light Blue $brand-info
 
 // Accent Colors
 $color-a1: #1B79C0; // Dark Blue
