--- a/src/scss/colortheme/cs-global.scss
+++ b/src/scss/colortheme/cs-global.scss
@@ -38,12 +38,21 @@
 .color-s1 {
  color: $color-s1 !important;
 }
+.color-s1-hover:hover, .color-s1-hover:focus {
+ color: $color-s1 !important;
+}
 
 .color-s2 {
  color: $color-s2 !important;
 }
+.color-s2-hover:hover, .color-s2-hover:focus {
+ color: $color-s2 !important;
+}
 
 .color-s3 {
+ color: $color-s3 !important;
+}
+.color-s3-hover:hover, .color-s3-hover:focus {
  color: $color-s3 !important;
 }
 
@@ -83,12 +92,35 @@
  background-color: $color-s1 !important;
 }
 
+.bg-s1-hover-color {
+ background-color: darken($color-s1, 7%) !important;
+}
+
+.bg-s1-hover:hover, .bg-s1-hover:focus {
+ background-color: darken($color-s1, 7%) !important;
+}
+
+.bg-s2-hover-color {
+ background-color: darken($color-s2, 7%) !important;
+}
+
 .bg-s2 {
  background-color: $color-s2 !important;
 }
 
+.bg-s3-hover-color {
+ background-color: darken($color-s3, 7%) !important;
+}
+
+.bg-s2-hover:hover, .bg-s2-hover:focus {
+ background-color: darken($color-s2, 7%) !important;
+}
+
 .bg-s3 {
  background-color: $color-s3 !important;
+}
+.bg-s3-hover:hover, .bg-s3-hover:focus {
+ background-color: darken($color-s3, 7%) !important;
 }
 
 .bg-primary-light {
