added site footer to every page #523

--- a/src/_includes/global-footer.njk
+++ b/src/_includes/global-footer.njk
@@ -12,7 +12,7 @@
          <li><a href="/privacy-policy.html">Privacy policy</a></li>
          <li><a href="/images/WebAccessibilityCert-beta.template.webstandards.ca.gov.pdf">Accessibility</a></li>
          {# <li><a href="/contact-us.html">Contact us</a></li> #}
-         <li><a href="/about.html">About</a></li>
+         {# <li><a href="/about.html">About</a></li> #}
      </ul>
 
      <ul class="socialsharer-container">
