--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -36,7 +36,7 @@
   {% block content %}
     {{ content | safe }}
   {% endblock %}
-
+{% include "modules/site-footer.html" %}
   {% include "../global-footer.njk" %}
   {% include "../scripts.njk" %}
 </body>
