--- a/src/_includes/modules/timeline.html
+++ b/src/_includes/modules/timeline.html
@@ -7,7 +7,7 @@
                 <article class="row">
                     <!-- Timeline Date -->
                     <div class="col-md-3 text-md-end p-r-md">
-                        <div class="h5 m-t m-b-0">Step 1. Contributor name</div>
+                        <div class="h5 m-t m-b-0">Step 1 Contributor</div>
                         <div class="h6 m-y-0">YY - YY</div>
                     </div>
                     <!-- End Timeline Date -->
@@ -28,7 +28,7 @@
                 <article class="row">
                     <!-- Timeline Date -->
                     <div class="col-md-3  text-md-end p-r-md">
-                        <div class="h5 m-t m-b-0">Step 2. Contributor name</div>
+                        <div class="h5 m-t m-b-0">Step 2 Contributor</div>
                         <div class="h6 m-y-0">YY - YY</div>
                     </div>
                     <!-- End Timeline Date -->
@@ -50,7 +50,7 @@
                 <article class="row">
                     <!-- Timeline Date -->
                     <div class="col-md-3 text-md-end p-r-md">
-                        <div class="h5 m-t m-b-0">Step 3. Contributor name</div>
+                        <div class="h5 m-t m-b-0">Step 3 Contributor</div>
                         <div class="h6 m-y-0">YY - YY</div>
                     </div>
                     <!-- End Timeline Date -->
@@ -72,7 +72,7 @@
                 <article class="row">
                     <!-- Timeline Date -->
                     <div class="col-md-3 text-md-end p-r-md">
-                        <div class="h5 m-t m-b-0">Step 4. Contributor name</div>
+                        <div class="h5 m-t m-b-0">Step 4 Contributor</div>
                         <div class="h6 m-y-0">YY - YY</div>
                     </div>
                     <!-- End Timeline Date -->
