--- a/src/scss/cagov/header-banner.scss
+++ b/src/scss/cagov/header-banner.scss
@@ -4,41 +4,41 @@
 ----------------------------------------- */
 
 .header-slideshow-banner {
- display: none;
- height: 500px; // Beta 5.0 addition
- position: relative;
+  display: none;
+  height: 500px; // Beta 5.0 addition
+  position: relative;
 }
 
 @media (min-width: $screen-sm-min) {
- .header-slideshow-banner.enabled {
-  display: block;
- }
+  .header-slideshow-banner.enabled {
+    display: block;
+  }
 }
 
 .header-single-banner,
 .header-large-banner {
- width: 100%;
- height: 80vh;
- overflow: hidden;
- background-position: center !important;
- background-size: cover !important;
- display: block;
- min-width: 100%;
- min-height: 100%;
- position: relative;
- @media (max-width: $screen-xs-max) {
-  height: unset;
-  padding-top: 70px;
-  padding-bottom: 80px;
- }
+  width: 100%;
+  height: 80vh;
+  overflow: hidden;
+  background-position: center !important;
+  background-size: cover !important;
+  display: block;
+  min-width: 100%;
+  min-height: 100%;
+  position: relative;
+  @media (max-width: $screen-xs-max) {
+    height: unset;
+    padding-top: 70px;
+    padding-bottom: 80px;
+  }
 }
 
 .header-slideshow-banner {
- position: absolute;
- top: 0;
- height: 100%;
- width: 100%;
- overflow: hidden;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
 
 .carousel-banner,
@@ -46,43 +46,54 @@
 .carousel-banner .owl-stage,
 .carousel-banner .owl-item,
 .carousel-banner .slide {
- height: 100%;
+  height: 100%;
 }
 
 // Beta 5.0 addition
 @media (max-width: $screen-xs-max) {
- .ask-group + .header-primary-banner,
- .ask-group + .header-large-banner,
- .ask-group + .header-slideshow-banner {
-  display: none;
- }
+  .ask-group + .header-primary-banner,
+  .ask-group + .header-large-banner,
+  .ask-group + .header-slideshow-banner {
+    display: none;
+  }
 
- .primary .header-large-banner,
- .primary .header-slideshow-banner {
-  display: none;
- }
+  .primary .header-large-banner,
+  .primary .header-slideshow-banner {
+    display: none;
+  }
 }
 
 .header-image {
- width: 100%;
- height: auto;
- overflow: hidden;
- background-image: url("/images/main-banner9.jpg");
- background-position: center;
- background-size: cover;
- display: block;
- min-width: 100%;
- min-height: 100%;
- position: relative;
- color: $white;
- padding: 1rem 0 1.5rem 0;
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  background-image: url("/images/main-banner.svg");
+  background-position: center;
+  background-size: cover;
+  display: block;
+  min-width: 100%;
+  min-height: 100%;
+  position: relative;
+  color: $white;
+  padding: 1rem 0 1.5rem 0;
 }
 
 .header-primary-banner {
- overflow: hidden;
- background-position: center !important;
- background-size: cover !important;
- display: block;
- position: relative;
- height: 400px;
+  overflow: hidden;
+  background-color: #395567;
+  background-position: center !important;
+  background-size: cover !important;
+  display: block;
+  position: relative;
+  height: 500px;
+  p {
+    font-size: 2.9375rem;
+    color: #ffffff;
+    font-weight: 200;
+    line-height: 3.675rem;
+    margin-bottom: 2rem;
+    span {
+      font-weight: 600;
+    }
+  }
 }
