--- a/src/scss/colortheme/cs-search.scss
+++ b/src/scss/colortheme/cs-search.scss
@@ -11,16 +11,16 @@
         }
     }
     .search-textfield {
-        border-color: $color-p2 !important;
+        border-color: $gray-600 !important;
     }
 
     .gsc-search-button {
-        background-color: $color-p2;
-        border-color: $color-p2;
+        background-color: $gray-600;
+        border-color: $gray-600;
         &:hover,
         &:focus {
-            background-color: darken($color-p2, 7%);
-            border-color: darken($color-p2, 7%);
+            background-color: $gray-800;
+            border-color: $gray-800;
         }
         .ca-gov-icon-search {
             color: $white;
