updated components landing page #299

--- a/src/_includes/layouts/components.njk
+++ b/src/_includes/layouts/components.njk
@@ -14,7 +14,7 @@
 
 
 <ul class="list-navigation">
-  <li><a href="/components.html" class="nav-heading" id="components-list">Components</a>
+  <li><a href="/components.html" class="nav-heading" id="components-list">All components</a>
   <ul>
   				{% for item in components.components %}
       {% if 'subnav' in item %}
@@ -36,7 +36,7 @@
       {% endfor %}
       </ul>
   </li>
-  <li><a href="/css-shortcuts/css-units.html" id="components-list">CSS Style Shortcuts</a>
+  <li><a href="/css-shortcuts/css-units.html" id="components-list">CSS style shortcuts</a>
  </ul>
 
 
