Fixed footer items #523

--- a/src/_includes/global-footer.njk
+++ b/src/_includes/global-footer.njk
@@ -4,7 +4,7 @@
   <div class="container">
    <div class="d-flex">
      <a href="https://ca.gov" class="cagov-logo" target="_blank">
-     <img src="/images/Ca-Gov-Logo-Blue.svg" alt="CA.gov logo">
+     <img src="/images/Ca-Gov-Logo-Gold.svg" alt="CA.gov logo">
      </a>
  
      <ul class="footer-links">
@@ -24,7 +24,7 @@
 
   <!-- Copyright Statement -->
   <div class="copyright">
-    <div class="container">
+    <div class="container text-right">
         Copyright &copy;
         <span id="thisyear">
     <script>document.getElementById('thisyear').appendChild(document.createTextNode(new Date().getFullYear()))</script>
