--- a/src/_includes/modules/site-footer.html
+++ b/src/_includes/modules/site-footer.html
@@ -2,7 +2,7 @@
  <div class="container">
   <div class="row">
    <div class="col-md-4">
-    <h3 class="h4 w-100 brd-bottom brd-highlight p-b">More on V6</h3>
+    <h3 class="h4 w-100 brd-bottom brd-highlight p-b">State Web Template</h3>
     <a href="/about.html" class="d-block no-underline m-y font-size-16">About</a>
     <a href="/contact-us.html" class="d-block no-underline m-y font-size-16">Contact us</a>
    </div>
