--- a/src/_includes/modules/form-label.html
+++ b/src/_includes/modules/form-label.html
@@ -1,2 +1,2 @@
-<label class="form-control-label" for="InputName">Name</label>
-<input type="text" class="form-control" id="InputName" placeholder="Enter your name here">
+<label class="form-control-label" for="InputName">Full name</label>
+<input type="text" class="form-control" id="InputName" placeholder="Name">
