--- a/src/_includes/modules/form-textfield.html
+++ b/src/_includes/modules/form-textfield.html
@@ -1,11 +1,11 @@
-<label class="form-control-label" for="InputName">Name</label>
-<input type="text" class="form-control" id="InputName" placeholder="Enter your name here">
+<label class="form-control-label" for="InputName">Full name</label>
+<input type="text" class="form-control" id="InputName" placeholder="Name">
 <div class="feedback text-muted">
 </div>
 
 <h3 class="h4">Required</h3>
-<label class="form-control-label" for="InputNameRequired"><span class="required-label">*</span> Name</label>
-<input type="text" class="form-control" id="InputNameRequired" placeholder="Enter your name here">
+<label class="form-control-label" for="InputNameRequired"><span class="required-label">*</span> Full name</label>
+<input type="text" class="form-control" id="InputNameRequired" placeholder="Name">
 <div class="invalid-feedback d-block">
  This field is required
 </div>
