Modify arrow icon, and add hover effects

--- a/src/_includes/modules/section-icon-blocks.html
+++ b/src/_includes/modules/section-icon-blocks.html
@@ -2,9 +2,9 @@
 <div style="background:#F5F5F5;">
 	<div class="container p-t-lg">
 		<div class="row">
-			<div class="third m-b-lg">
+			<div class="third m-b-lg round-card">
 				<!-- Icon Blocks -->
-				<a href="/sample/color-schemes.html" class="no-underline d-block bg-grey-lightest-hover p-a-md"
+				<a href="/sample/color-schemes.html" class="no-underline d-block p-a-md"
 					title="Browse components">
 					<div class="text-center">
 						<img class="image-icon rounded-50x m-b" src="/images/browse-components.svg" alt="" style="width:138px;">
@@ -13,9 +13,9 @@
 				</a>
 				<!-- End Icon Blocks -->
 			</div>
-			<div class="third m-b-lg">
+			<div class="third m-b-lg round-card">
 				<!-- Icon Blocks -->
-				<a href="/accessibility.html" class="no-underline d-block bg-grey-lightest-hover p-a-md" title="Search icons">
+				<a href="/accessibility.html" class="no-underline d-block p-a-md" title="Search icons">
 					<div class="text-center">
 						<img class="image-icon rounded-50x m-b" src="/images/search-icons.svg" alt="" style="width:138px;">
 						<h2 class="h5 m-b-sm color-gray-dark m-t-0">Search icons</h2>
@@ -23,9 +23,9 @@
 				</a>
 				<!-- End Icon Blocks -->
 			</div>
-			<div class="third m-b-lg">
+			<div class="third m-b-lg round-card">
 				<!-- Icon Blocks -->
-				<a href="/sample/" class="no-underline d-block bg-grey-lightest-hover p-a-md" title="Color themes">
+				<a href="/sample/" class="no-underline d-block p-a-md" title="Color themes">
 					<div class="text-center">
 						<img class="image-icon rounded-50x m-b" src="/images/explore-color-themes.svg" alt="" style="width:138px;">
 						<h2 class="h5 m-b-sm color-gray-dark m-t-0">Explore color themes</h2>
@@ -37,3 +37,8 @@
 		<!-- End group -->
 	</div>
 </div>
+<style>
+	.round-card:hover {
+		background: white;
+	}
+</style>
