--- a/src/_includes/modules/three-cards.html
+++ b/src/_includes/modules/three-cards.html
@@ -1,12 +1,12 @@
 <div class="container">
 	<h2 class="p-t-1 p-b-3">What's new in V6</h2>
 	<div class="row">
-		<div class="third m-b-md">
+		<div class="third m-b-md bg-white-hover p-4">
 			<div class="pos-rel m-b-0" style="max-height: 155px;overflow: hidden;background: linear-gradient(180deg, #046B99 0%, #4993B5 100%);text-align: center;">
 				<img class="p-4" src="/images/pattern-icon.svg" alt="Image Description">
 			</div>
 
-			<div class="p-a" style="min-height: 236px; background:#fafafa">
+			<div class="p-a " style="min-height: 236px; background:#fafafa">
 				<h3 class="h4 m-t-0 m-b-sm">
 					<a class="color-gray-dark color-primary-hover text-decoration-none" href="#">New patterns</a>
 				</h3>
@@ -14,7 +14,7 @@
 			</div>
 		</div>
 
-		<div class="third m-b-md">
+		<div class="third m-b-md bg-white-hover p-4">
 			<div class="pos-rel m-b-0" style="max-height: 155px;overflow: hidden;background: linear-gradient(180deg, #046B99 0%, #4993B5 100%);text-align: center;">
 				<img class="p-4" src="/images/nav-icon.svg" alt="Image Description">
 			</div>
@@ -27,7 +27,7 @@
 			</div>
 		</div>
 
-		<div class="third m-b-md">
+		<div class="third m-b-md bg-white-hover p-4">
 			<div style="max-height: 155px;overflow: hidden;background: linear-gradient(180deg, #046B99 0%, #4993B5 100%);text-align: center;">
 				<img class="p-4" src="/images/refreshed-icon.svg" alt="Image Description">
 			</div>
@@ -41,7 +41,15 @@
 	</div>
 	<div class="container">
 		<p class="link-action m-b-md">
-			<span class="ca-gov-icon-right"></span> Visit <a href="">what’s new</a> for more on V6 template and website updates.
+			<span class="ca-gov-icon-right" style="color:#046b99;vertical-align:sub;font-size:1.71875rem;"></span> Visit <a href="">what’s new</a> for more on V6 template and website updates.
 		</p>
 	</div>
 </div>
+<style>
+	.bg-white-hover {
+		border: 1px solid #ffffff;
+	}
+	.bg-white-hover:hover {
+		border: 1px solid #cecece;
+	}
+</style>
