--- a/src/_includes/modules/timeline-angled.html
+++ b/src/_includes/modules/timeline-angled.html
@@ -1,19 +1,19 @@
 <!-- Static Process Bold -->
 
 <div style="background:linear-gradient(83.81deg, rgba(73, 147, 181, 0.2) 4.53%, rgba(73, 147, 181, 0) 100%);overflow:hidden;">
-    <div class="container" style="margin-bottom:3rem;">
+    <div class="container mb-3">
         <div style="margin-bottom:6rem;max-width:876px;">
             <h2>The State Template is one step closer to the Design System</h2>
             <p>The final release (V6) of the State Web Template is part of a planned move to the Design System. V6 of the State Template moves us one step closer to a new statewide digital standard. This timeline describes our planned activities and release dates.</p>
         </div>
-        <div class="row" style="transform: rotate(-6deg);">
+        <div class="row timeline-lines">
             <div class="col-sm-3 m-b-60" style="margin-top:-1rem;">
                 <!-- Static Process -->
                 <div class="text-center">
                     <i class="dot-line brd-transparent-before brd-primary-light-after">
                         <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
                     </i>
-                    <div style="transform: rotate(6deg);">
+                    <div class="dot-text">
                         <h3 class="h5 m-b">2021</h3>
                         <p class="m-b-0">Release the beta version of the new statewide Design System</p>
                     </div>
@@ -27,7 +27,7 @@
                     <i class="dot-line brd-primary-light-before brd-primary-light-after">
                         <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
                     </i>
-                    <div style="transform: rotate(6deg);">
+                    <div class="dot-text">
                         <h3 class="h5 m-b">2022</h3>
                         <p class="m-b-0">Update the State Web Template V6 to align with the Design System</p>
                     </div>
@@ -41,7 +41,7 @@
                     <i class="dot-line brd-primary-light-before brd-gray-light-after">
                         <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
                     </i>
-                    <div style="transform: rotate(6deg);">
+                    <div class="dot-text">
                         <h3 class="h5 m-b">2023</h3>
                         <p class="m-b-0">Release the first production version of the Design System</p>
                     </div>
@@ -55,7 +55,7 @@
                     <i class="dot-line brd-gray-light-before brd-transparent-after">
                         <span class="dot-line-inner bg-grey-light brd-gray-light"></span>
                     </i>
-                    <div style="transform: rotate(6deg);">
+                    <div class="dot-text">
                         <h3 class="h5 m-b">2024+</h3>
                         <p class="m-b-0">Continue to improve the Design System and support a transition to it</p>
                     </div>
@@ -66,3 +66,17 @@
     </div>
 </div>
 <!-- End Static Process -->
+<style>
+    .timeline-lines {
+        transform: rotate(-6deg);
+    }
+    .dot-text {
+        transform: rotate(6deg);
+    }
+    @media (max-width: 767px) {
+        .dot-text,
+        .timeline-lines {
+            transform: rotate(0deg);
+        }
+    }
+</style>
