--- a/src/_includes/modules/section-icon-blocks.html
+++ b/src/_includes/modules/section-icon-blocks.html
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="third m-b-lg round-card">
 				<!-- Icon Blocks -->
-				<a href="/sample/color-schemes.html" class="no-underline d-block p-a-md"
+				<a href="/components.html" class="no-underline d-block p-a-md"
 					title="Browse components">
 					<div class="text-center">
 						<img class="image-icon rounded-50x m-b" src="/images/browse-components.svg" alt="" style="width:138px;">
@@ -15,7 +15,7 @@
 			</div>
 			<div class="third m-b-lg round-card">
 				<!-- Icon Blocks -->
-				<a href="/accessibility.html" class="no-underline d-block p-a-md" title="Search icons">
+				<a href="/visual-design/icons.html#Search-icons" class="no-underline d-block p-a-md" title="Search icons">
 					<div class="text-center">
 						<img class="image-icon rounded-50x m-b" src="/images/search-icons.svg" alt="" style="width:138px;">
 						<h2 class="h5 m-b-sm color-gray-dark m-t-0">Search icons</h2>
@@ -25,7 +25,7 @@
 			</div>
 			<div class="third m-b-lg round-card">
 				<!-- Icon Blocks -->
-				<a href="/sample/" class="no-underline d-block p-a-md" title="Color themes">
+				<a href="/visual-design/color.html#ColorThemes" class="no-underline d-block p-a-md" title="Color themes">
 					<div class="text-center">
 						<img class="image-icon rounded-50x m-b" src="/images/explore-color-themes.svg" alt="" style="width:138px;">
 						<h2 class="h5 m-b-sm color-gray-dark m-t-0">Explore color themes</h2>
