--- a/src/_includes/modules/three-cards.html
+++ b/src/_includes/modules/three-cards.html
@@ -8,7 +8,7 @@
 
 			<div class="p-a " style="min-height: 236px; background:#fafafa">
 				<h3 class="h4 m-t-0 m-b-sm">
-					<a class="color-gray-dark color-primary-hover text-decoration-none" href="#">New patterns</a>
+					<a class="color-gray-dark color-primary-hover text-decoration-none" href="/patterns.html">New patterns</a>
 				</h3>
 				<p>We added new components, combined similar components, and improved the overall design and functionality.</p>
 			</div>
@@ -33,7 +33,7 @@
 			</div>
 			<div class="p-a" style="min-height: 236px; background: #FAFAFA;">
 				<h3 class="h4 m-t-0 m-b-sm">
-					<a class="color-gray-dark color-primary-hover text-decoration-none" href="#">Refreshed visual design</a>
+					<a class="color-gray-dark color-primary-hover text-decoration-none" href="/typography.html">Refreshed visual design</a>
 				</h3>
 				<p>We’ve enhanced our typography with the Public Sans font family. Strengthen your department’s brand and content with this strong, neutral typeface.</p>
 			</div>
@@ -41,7 +41,7 @@
 	</div>
 	<div class="container">
 		<p class="link-action m-b-md">
-			<span class="ca-gov-icon-right" style="color:#046b99;vertical-align:sub;font-size:1.71875rem;"></span> Visit <a href="">what’s new</a> for more on V6 template and website updates.
+			<span class="ca-gov-icon-right" style="color:#046b99;vertical-align:sub;font-size:1.71875rem;"></span> Visit <a href="/whats-new.html">what’s new</a> for more on V6 template and website updates.
 		</p>
 	</div>
 </div>
