--- a/src/_includes/modules/two-cards.html
+++ b/src/_includes/modules/two-cards.html
@@ -8,13 +8,13 @@
 
 			<div class="p-a" style="min-height: 236px;">
 				<h3 class="h4 m-t-0 m-b-sm">
-					<a class="color-gray-dark color-primary-hover text-decoration-none" href="#">Broadband for All</a>
+					<a class="color-gray-dark color-primary-hover text-decoration-none" href="https://broadbandforall.cdt.ca.gov/">Broadband for All</a>
 				</h3>
 				<p>The State Web Template enabled a plug-and-play approach with components on the homepage. With less time spent on engineering, the team could focus more on content and design.</p>
 
 				<span>
 					<span class="ca-gov-icon-right" style="color:#046b99;vertical-align: middle;font-size:2rem;"></span>
-					<a href="">
+					<a href="https://broadbandforall.cdt.ca.gov/">
 					broadbandforall.cdt.ca.gov
 				</a>
 
@@ -29,12 +29,12 @@
 
 			<div class="p-a" style="min-height: 236px;">
 				<h3 class="h4 m-t-0 m-b-sm">
-					<a class="color-gray-dark color-primary-hover text-decoration-none" href="#">California abortion access</a>
+					<a class="color-gray-dark color-primary-hover text-decoration-none" href="https://abortion.ca.gov/">California abortion access</a>
 				</h3>
 				<p>This site launched in three weeks! The new template gave the design team an ability to fast track the design and information architecture. The template proved critical in sharing official information on women’s health.</p>
 				<span>
 					<span class="ca-gov-icon-right" style="color:#046b99;vertical-align: middle;font-size:2rem;"></span>
-					<a href="">
+					<a href="https://abortion.ca.gov/">
 					abortion.ca.gov
 				</a>
 				</span>
