--- a/src/_includes/modules/header-primary-banner.html
+++ b/src/_includes/modules/header-primary-banner.html
@@ -5,8 +5,8 @@
 			<div class="col-sm my-auto">
 				<p>Enhance your websites and applications with the latest version (V6) of the <span style="color: #ffffff">Web Template!</span></p>
 				<div class="btn-row p-b">
-					<a href="" class="btn btn-primary">Introducing V6</a>
-					<a class="btn btn-primary">Download V6 span <span class="ca-gov-icon-download-cloud"></span></a>
+					<a href="/whats-new.html" class="btn btn-primary">Introducing V6</a>
+					<a class="btn btn-primary" href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/tree/6.0.8">Download V6 span <span class="ca-gov-icon-download-cloud"></span></a>
 				</div>
 			</div>
 			<div class="col-sm my-auto">
