Update typography link

--- a/src/_includes/modules/three-cards.html
+++ b/src/_includes/modules/three-cards.html
@@ -34,7 +34,7 @@
 		</div>
 
 		<div class="third m-b-md bg-white-hover p-4">
-			<a class="color-gray-dark text-decoration-none link-before" href="/typography.html">
+			<a class="color-gray-dark text-decoration-none link-before" href="/visual-design/typography.html">
 				<div style="max-height: 155px;overflow: hidden;background: linear-gradient(180deg, #046B99 0%, #4993B5 100%);text-align: center;">
 					<img class="p-4" src="/images/refreshed-icon.svg" alt="Image Description">
 				</div>
