--- a/src/_includes/breadcrumbs.njk
+++ b/src/_includes/breadcrumbs.njk
@@ -4,7 +4,9 @@
    {% for nav in breadcrumbs.pages %}
     {% if helpers.getURL(nav.url, page.url) %} 
      {% if nav.parent %} 
-      <li><a href="{{nav.parentURL }}" title="{{ nav.parent }} landing page">{{ nav.parent }}</a></li>
+     {% if nav.parentURL %} 
+     <li><a href="{{nav.parentURL }}" title="{{ nav.parent }} landing page">{{ nav.parent }}</a></li>
+     {% else %}  <li>{{ nav.parent }}</li>{% endif %} 
        {% if nav.subparent %} 
          <li><a href="{{nav.subparentURL }}" title="{{ nav.subparent }} landing page">{{ nav.subparent }}</a></li>
        {% endif %} 
