updated settings bar and serp page #568

--- a/src/scss/cagov/settings-bar.scss
+++ b/src/scss/cagov/settings-bar.scss
@@ -12,7 +12,7 @@
   flex-wrap: wrap;
  }
  .btn-group {
-  margin-right: 0.75rem;
+  margin-right: 12px;
   margin-top: 0.35rem;
   margin-bottom: 0.35rem;
  }
@@ -20,10 +20,10 @@
   position: relative;
   right: -15px;
   right: -10px;
-  color: $black;
+  color: $gray-900;
   text-shadow: none;
   opacity: 1;
-  font-size: 2rem;
+  font-size: 1.75rem;
   border: none;
   background: none;
   float: right;
@@ -32,7 +32,7 @@
   }
   &:hover,
   &:focus {
-   color: $gray-700 !important;
+   color: $black !important;
   }
  }
 }
