--- a/src/_includes/layouts/search.njk
+++ b/src/_includes/layouts/search.njk
@@ -45,19 +45,16 @@
 			<!--Search result section-->
             <div class="section section-default">
                 <div class="container search-results-header">
-
-                   {# Breadcrumbs (rendering data from /src/_data/breadcrumbs.json and /src/_data/helpers.js  #}
-    {% include "../breadcrumbs.njk" %}
                     <!--Uncomment if you prefer to use original google search box. Be advided that original custom search box is not meeting WCAG accessibility standards. -->
                     <!--<gcse:searchbox-only resultsUrl="/serp.html" enableAutoComplete="true"></gcse:searchbox-only>-->
 
                     <form id="Search" class="pos-rel" action="/serp.html">
                         <span class="sr-only" id="SearchInput">Custom Google Search</span>
                         <input type="text" id="q" name="q" aria-labelledby="SearchInput"
-                            placeholder="Search this website" class="w-100 height-50 border-0 p-x-sm" />
+                            placeholder="Search this website" class=" search-textfield height-40" style="width:95%" />
                         <button type="submit"
-                            class="pos-abs gsc-search-button right-0 top-0 width-50 height-50 border-0"><span
-                                class="ca-gov-icon-search font-size-30" aria-hidden="true"></span><span
+                            class="gsc-search-button width-60 height-40 pos-abs color-white right-0 top-0 border-0 bg-gray-600 bg-gray-800-hover"><span
+                                class="ca-gov-icon-search" aria-hidden="true"></span><span
                                 class="sr-only">Submit</span></button>
                     </form>
 
