--- a/src/_includes/settings-bar.njk
+++ b/src/_includes/settings-bar.njk
@@ -34,7 +34,7 @@
    </div>
 
    <div class="btn-group">
-    <button type="button" class="btn btn-s1 btn-lg brd-s1 dyslexicFont">Dyslexic Font</button>
+    <button type="button" class="btn btn-s1 btn-lg brd-s1 dyslexicFont">Dyslexic font</button>
    </div>
 
    <button type="button" class="close ms-auto" data-bs-toggle="collapse" data-bs-target="#siteSettings"
