update link grid example

--- a/src/_includes/modules/three-cards.html
+++ b/src/_includes/modules/three-cards.html
@@ -7,11 +7,11 @@
 				<div class="pos-rel m-b-0" style="max-height: 155px;overflow: hidden;background: linear-gradient(180deg, #046B99 0%, #4993B5 100%);text-align: center;">
 					<img class="p-4" src="/images/pattern-icon.svg" alt="Image Description">
 				</div>
-				<div class="p-a " style="min-height: 236px; background:#fafafa">
+				<div class="p-a " style="min-height: 236px; background:#EDEDEF">
 					<h3 class="h4 m-t-0 m-b-sm">
-					New patterns
+					Patterns
 				</h3>
-					<p>We added new components, combined similar components, and improved the overall design and functionality.</p>
+					<p>Content patterns are now available! This design solution will enhance your visitors' experience and help them complete their tasks.</p>
 				</div>
 			</a>
 
@@ -23,7 +23,7 @@
 					<img class="p-4" src="/images/nav-icon.svg" alt="Image Description">
 				</div>
 
-				<div class="p-a" style="min-height: 236px; background:#fafafa">
+				<div class="p-a" style="min-height: 236px; background:#EDEDEF">
 
 					<h3 class="h4 m-t-0 m-b-sm">
 					Enhanced navigation
@@ -38,7 +38,7 @@
 				<div style="max-height: 155px;overflow: hidden;background: linear-gradient(180deg, #046B99 0%, #4993B5 100%);text-align: center;">
 					<img class="p-4" src="/images/refreshed-icon.svg" alt="Image Description">
 				</div>
-				<div class="p-a" style="min-height: 236px; background: #FAFAFA;">
+				<div class="p-a" style="min-height: 236px; background: #EDEDEF;">
 
 					<h3 class="h4 m-t-0 m-b-sm">
 					Refreshed visual design
@@ -51,7 +51,7 @@
 	</div>
 	<div class="container">
 		<p class="link-action m-b-md">
-			<span class="ca-gov-icon-right" style="color:#046b99;vertical-align:sub;font-size:1.71875rem;"></span> Visit <a href="/whats-new.html">what’s new</a> for more on V6 template and website updates.
+			<span class="ca-gov-icon-right" style="color:#046b99;vertical-align:sub;font-size:1.71875rem;"></span> Visit <a href="/whats-new.html">What’s new</a> for more detail on V6 template and website updates. 
 		</p>
 	</div>
 </div>
