--- a/src/_includes/modules/section-icon-blocks.html
+++ b/src/_includes/modules/section-icon-blocks.html
@@ -1,34 +1,34 @@
 <!--Icon Image Blocks-->
-<div style="background:#F5F5F5;">
+<div style="background:#EDEDEF;">
 	<div class="container p-t-lg">
 		<div class="row">
-			<div class="third m-b-lg round-card">
+			<div class="third m-b-lg round-card color-primary-hover">
 				<!-- Icon Blocks -->
-				<a href="/components.html" class="no-underline d-block p-a-md"
+				<a href="/components.html" class="no-underline d-block p-a-md color-gray-dark"
 					title="Browse components">
 					<div class="text-center">
 						<img class="image-icon rounded-50x m-b" src="/images/browse-components.svg" alt="" style="width:138px;">
-						<h2 class="h5 m-b-sm color-gray-dark m-t-0">Browse components</h2>
+						<h2 class="h5 m-b-sm m-t-0">Browse components</h2>
 					</div>
 				</a>
 				<!-- End Icon Blocks -->
 			</div>
-			<div class="third m-b-lg round-card">
+			<div class="third m-b-lg round-card color-primary-hover">
 				<!-- Icon Blocks -->
-				<a href="/visual-design/icons.html#Search-icons" class="no-underline d-block p-a-md" title="Search icons">
+				<a href="/visual-design/icons.html#Search-icons" class="no-underline d-block p-a-md color-gray-dark" title="Search icons">
 					<div class="text-center">
 						<img class="image-icon rounded-50x m-b" src="/images/search-icons.svg" alt="" style="width:138px;">
-						<h2 class="h5 m-b-sm color-gray-dark m-t-0">Search icons</h2>
+						<h2 class="h5 m-b-sm m-t-0 color-primary-hover">Search icons</h2>
 					</div>
 				</a>
 				<!-- End Icon Blocks -->
 			</div>
-			<div class="third m-b-lg round-card">
+			<div class="third m-b-lg round-card color-primary-hover">
 				<!-- Icon Blocks -->
-				<a href="/visual-design/color.html#ColorThemes" class="no-underline d-block p-a-md" title="Color themes">
+				<a href="/visual-design/color.html#ColorThemes" class="no-underline d-block p-a-md color-gray-dark" title="Color themes">
 					<div class="text-center">
 						<img class="image-icon rounded-50x m-b" src="/images/explore-color-themes.svg" alt="" style="width:138px;">
-						<h2 class="h5 m-b-sm color-gray-dark m-t-0">Explore color themes</h2>
+						<h2 class="h5 m-b-sm m-t-0">Explore color themes</h2>
 					</div>
 				</a>
 				<!-- End Icon Blocks -->
