updated banner page #332

--- a/src/scss/cagov/globals.scss
+++ b/src/scss/cagov/globals.scss
@@ -842,43 +842,43 @@ background-color: $outline-default-color !important;
   Font Sizes
 ------------------------------------*/
 .text-huge {
- font-size: 6rem;
+ font-size: 6rem !important;
 }
 
 .text-5rem {
- font-size: 5rem;
+ font-size: 5rem !important;
 }
 
 .text-4rem {
- font-size: 4rem;
+ font-size: 4rem !important;
 }
 
 .text-3-5rem {
- font-size: 3.5rem;
+ font-size: 3.5rem !important;
 }
 
 .text-3rem {
- font-size: 3rem;
+ font-size: 3rem !important;
 }
 
 .text-2-5rem {
- font-size: 2.5rem;
+ font-size: 2.5rem !important;
 }
 
 .text-2rem {
- font-size: 2rem;
+ font-size: 2rem !important;
 }
 
 .text-1-5rem {
- font-size: 1.5rem;
+ font-size: 1.5rem !important;
 }
 
 .text-1rem {
- font-size: 1rem;
+ font-size: 1rem !important;
 }
 
 .font-size-sm {
- font-size: ($font-size-base * 0.75);
+ font-size: ($font-size-base * 0.75) !important;
 }
 
 .font-size-70x {
@@ -1012,35 +1012,35 @@ background-color: $outline-default-color !important;
   Rounded borders
 ------------------------------------*/
 .rounded-20 {
- border-radius: 20px;
+ border-radius: 20px !important;
 }
 
 .rounded-15 {
- border-radius: 15px;
+ border-radius: 15px !important;
 }
 
 .rounded-10 {
- border-radius: 10px;
+ border-radius: 10px !important;
 }
 
 .rounded-5 {
- border-radius: 5px;
+ border-radius: 5px !important;
 }
 
 .rounded-4 {
- border-radius: 4px;
+ border-radius: 4px !important;
 }
 
 .rounded-3 {
- border-radius: 3px;
+ border-radius: 3px !important;
 }
 
 .rounded-2 {
- border-radius: 2px;
+ border-radius: 2px !important;
 }
 
 .rounded-50 {
- border-radius: 50px;
+ border-radius: 50px !important;
 }
 
 .rounded-0 {
@@ -1048,7 +1048,7 @@ background-color: $outline-default-color !important;
 }
 
 .rounded-50x {
- border-radius: 50%;
+ border-radius: 50% !important;
 }
 
 /*------------------------------------
