updated body text color to gray-900

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -48,7 +48,7 @@ $bootstrap-sass-asset-helper: false !default;
 //## Gray and brand colors for use across Bootstrap.
 
 $gray-base: #000 !default;
-$gray-text: #111111;
+$gray-text: #3b3a48;
 $gray-darker: lighten($gray-base, 13.5%) !default; // #222
 $gray-dark: lighten($gray-base, 20%) !default; // #333
 $gray: lighten($gray-base, 33.5%) !default; // #555
