--- a/src/_includes/modules/banner.html
+++ b/src/_includes/modules/banner.html
@@ -1,16 +1,17 @@
-<div class="header-primary-banner" style="background-image: url('/images/main-banner10.jpg');">
+<div class="header-primary-banner d-flex justify-content-center align-items-center"
+ style="background-image: url('/images/main-banner10.jpg');">
  <div class="container">
   <div class="row">
-   <div class="col-sm my-auto text-center color-white">
-    <div class="m-a-lg p-t-lg">
-     <h2 class="text-3rem m-t-0">Title</h2>
-     <p class="text-1-5rem line-height-1-5em">Highlight an action you want people to take or important information on
-      the
-      homepage.</p>
-     <div class="btn-row p-b">
-      <a href="#" class="btn btn-lg btn-highlight m-t">Short link</a>
-     </div>
+   <div class="col-sm color-white text-center p-a-lg">
+
+    <h2 class="text-3rem m-t-0">Title</h2>
+    <p class="text-1-5rem line-height-1-5em">Highlight an action you want people to take or important information on
+     the
+     homepage.</p>
+    <div class="btn-row p-b">
+     <a href="#" class="btn btn-lg btn-highlight m-t">Short link</a>
     </div>
+
 
    </div>
   </div>
