updated three cards section on the homepage

--- a/src/_includes/modules/three-cards.html
+++ b/src/_includes/modules/three-cards.html
@@ -1,65 +1,68 @@
 <div class="container">
-	<h2 class="p-t-1 p-b-3">What's new in V6</h2>
-	<div class="row">
-		<div class="third m-b-md bg-white-hover p-4">
+ <h2 class="p-t-1 p-b-3">What's new in V6</h2>
+ <div class="row d-flex flex-wrap justify-content-md-center">
+  <div class="col-md-4 m-b-md p-3 outline-1-gray-200-hover">
 
-			<a class="color-gray-dark text-decoration-none link-before" href="/patterns.html">
-				<div class="pos-rel m-b-0" style="max-height: 155px;overflow: hidden;background: linear-gradient(180deg, #046B99 0%, #4993B5 100%);text-align: center;">
-					<img class="p-4" src="/images/pattern-icon.svg" alt="Image Description">
-				</div>
-				<div class="p-a " style="min-height: 236px; background:#EDEDEF">
-					<h3 class="h4 m-t-0 m-b-sm">
-					Patterns
-				</h3>
-					<p>Content patterns are now available! This design solution will enhance your visitors' experience and help them complete their tasks.</p>
-				</div>
-			</a>
+   <div class="h-100 d-flex flex-column bg-gray-100 bg-gray-50-hover pos-rel">
 
-		</div>
 
-		<div class="third m-b-md bg-white-hover p-4">
-			<a class="color-gray-dark text-decoration-none link-before" href="/structure/site-navigation.html">
-				<div class="pos-rel m-b-0" style="max-height: 155px;overflow: hidden;background: linear-gradient(180deg, #046B99 0%, #4993B5 100%);text-align: center;">
-					<img class="p-4" src="/images/nav-icon.svg" alt="Image Description">
-				</div>
+    <div class="bg-primary-secondary-gradient p-a d-flex justify-content-center align-items-center">
+     <img class="p-4" src="/images/pattern-icon.svg" alt="Image Description">
+    </div>
 
-				<div class="p-a" style="min-height: 236px; background:#EDEDEF">
+    <div class="p-a-md">
+     <h3 class="h4 m-t-0 m-b-sm">
+      <a class="color-gray-dark text-decoration-none link-before" href="/patterns.html">Patterns</a>
+     </h3>
+     <p>Content patterns are now available! This design solution will enhance your visitors' experience and help them
+      complete their tasks.</p>
+    </div>
+   </div>
 
-					<h3 class="h4 m-t-0 m-b-sm">
-					Enhanced navigation
-				</h3>
-					<p>Better wayfinding and new side navigation makes developing user-friendly websites easier than ever.</p>
-				</div>
-			</a>
-		</div>
 
-		<div class="third m-b-md bg-white-hover p-4">
-			<a class="color-gray-dark text-decoration-none link-before" href="/visual-design/typography.html">
-				<div style="max-height: 155px;overflow: hidden;background: linear-gradient(180deg, #046B99 0%, #4993B5 100%);text-align: center;">
-					<img class="p-4" src="/images/refreshed-icon.svg" alt="Image Description">
-				</div>
-				<div class="p-a" style="min-height: 236px; background: #EDEDEF;">
 
-					<h3 class="h4 m-t-0 m-b-sm">
-					Refreshed visual design
-				</h3>
-					<p>We’ve enhanced our typography with the Public Sans font family. Strengthen your department’s brand and content with this strong, neutral typeface.</p>
+  </div>
 
-				</div>
-			</a>
-		</div>
-	</div>
-	<div class="container">
-		<p class="link-action m-b-md">
-			<span class="ca-gov-icon-right" style="color:#046b99;vertical-align:sub;font-size:1.71875rem;"></span> Visit <a href="/whats-new.html">What’s new</a> for more detail on V6 template and website updates. 
-		</p>
-	</div>
+  <div class="col-md-4 m-b-md p-3 outline-1-gray-200-hover">
+   <div class="h-100 d-flex flex-column bg-gray-100 bg-gray-50-hover pos-rel">
+
+    <div class="bg-primary-secondary-gradient p-a d-flex justify-content-center align-items-center">
+     <img class="p-4" src="/images/nav-icon.svg" alt="Image Description">
+    </div>
+
+    <div class="p-a-md">
+     <h3 class="h4 m-t-0 m-b-sm">
+      <a class="color-gray-dark text-decoration-none link-before" href="/structure/site-navigation.html">Enhanced
+       navigation</a>
+     </h3>
+     <p>Better wayfinding and new side navigation makes developing user-friendly websites easier than ever.</p>
+    </div>
+   </div>
+
+  </div>
+
+  <div class="col-md-4 m-b-md p-3 outline-1-gray-200-hover">
+   <div class="h-100 d-flex flex-column bg-gray-100  bg-gray-50-hover pos-rel">
+
+    <div class="bg-primary-secondary-gradient p-a d-flex justify-content-center align-items-center">
+     <img class="p-4" src="/images/refreshed-icon.svg" alt="Image Description">
+    </div>
+    <div class="p-a-md">
+     <h3 class="h4 m-t-0 m-b-sm">
+      <a class="color-gray-dark text-decoration-none link-before" href="/visual-design/typography.html">Refreshed visual
+       design</a>
+     </h3>
+     <p>We’ve enhanced our typography with the Public Sans font family. Strengthen your department’s brand and content
+      with this strong, neutral typeface.</p>
+    </div>
+   </div>
+
+  </div>
+ </div>
+ <div class="container">
+  <p class="link-action m-b-md">
+   <span class="ca-gov-icon-right" style="color:#046b99;vertical-align:sub;font-size:1.71875rem;"></span> Visit <a
+    href="/whats-new.html">What’s new</a> for more detail on V6 template and website updates.
+  </p>
+ </div>
 </div>
-<style>
-	.bg-white-hover {
-		border: 1px solid #ffffff;
-	}
-	.bg-white-hover:hover {
-		border: 1px solid #cecece;
-	}
-</style>
