--- a/src/scss/cagov/globals.scss
+++ b/src/scss/cagov/globals.scss
@@ -81,6 +81,38 @@
  text-decoration: none !important;
 }
 
+.outline-1-gray-100-hover:hover, .outline-1-gray-100-hover:hover {
+ outline: 1px solid $gray-100;
+ }
+ 
+ .outline-2-gray-100-hover:hover, .outline-2-gray-100-hover:hover {
+  outline: 2px solid $gray-100;
+  }
+
+.outline-1-gray-200-hover:hover, .outline-1-gray-200-hover:hover {
+outline: 1px solid $gray-200;
+}
+
+.outline-2-gray-200-hover:hover, .outline-2-gray-200-hover:hover {
+ outline: 2px solid $gray-200;
+ }
+
+ .outline-1-gray-300-hover:hover, .outline-1-gray-300-hover:hover {
+  outline: 1px solid $gray-300;
+  }
+  
+  .outline-2-gray-300-hover:hover, .outline-2-gray-300-hover:hover {
+   outline: 2px solid $gray-300;
+   }
+
+   .outline-1-gray-400-hover:hover, .outline-1-gray-400-hover:hover {
+    outline: 1px solid $gray-400;
+    }
+    
+    .outline-2-gray-400-hover:hover, .outline-2-gray-400-hover:hover {
+     outline: 2px solid $gray-400;
+     }
+
 .outline-focus:focus {
  @include outline(2px);
 }
@@ -490,13 +522,13 @@ background-color: $outline-default-color !important;
 .brd-white-after::after {
  border-color: $white !important;
 }
-.brd-gray-light {
+.brd-gray-light, .brd-gray-light-hover:hover, .brd-gray-light-hover:focus  {
  border-color: $card-border-color !important;
 }
-.brd-gray-dark {
+.brd-gray-dark, .brd-gray-dark-hover:hover, .brd-gray-dark-hover:focus  {
  border-color: $gray-dark !important;
 }
-.brd-gray {
+.brd-gray, .brd-gray-hover:hover, .brd-gray-hover:focus {
  border-color: $gray !important;
 }
 .brd-gray-light-before::before,
@@ -525,39 +557,39 @@ background-color: $outline-default-color !important;
 //Border styles
 .brd-dotted-1,
 .brd-dotted-1-before::before,
-.brd-dotted-1-after::after {
+.brd-dotted-1-after::after, .brd-dotted-1-hover:hover, .brd-dotted-1-hover:focus {
  border-width: 1px;
  border-style: dotted;
 }
 
 .brd-solid-1,
 .brd-solid-1-before::before,
-.brd-solid-1-after::after {
+.brd-solid-1-after::after, .brd-solid-1-hover:hover, .brd-solid-1-hover:focus {
  border-width: 1px !important;
  border-style: solid !important;
 }
 
 .brd-solid-2,
 .brd-solid-2-before::before,
-.brd-solid-2-after::after {
+.brd-solid-2-after::after, .brd-dotted-2-hover:hover, .brd-dotted-2-hover:focus {
  border-width: 2px !important;
  border-style: solid !important;
 }
 .brd-solid-3,
 .brd-solid-3-before::before,
-.brd-solid-3-after::after {
+.brd-solid-3-after::after, .brd-dotted-3-hover:hover, .brd-dotted-3-hover:focus {
  border-width: 3px !important;
  border-style: solid !important;
 }
 .brd-solid-4,
 .brd-solid-4-before::before,
-.brd-solid-4-after::after {
+.brd-solid-4-after::after, .brd-dotted-4-hover:hover, .brd-dotted-4-hover:focus {
  border-width: 4px !important;
  border-style: solid !important;
 }
 .brd-solid-5,
 .brd-solid-5-before::before,
-.brd-solid-5-after::after {
+.brd-solid-5-after::after, .brd-dotted-5-hover:hover, .brd-dotted-5-hover:focus {
  border-width: 5px !important;
  border-style: solid !important;
 }
