--- a/src/scss/cagov/gradient-backgrounds.scss
+++ b/src/scss/cagov/gradient-backgrounds.scss
@@ -24,6 +24,10 @@
   background-repeat: repeat-x;
   background-image: linear-gradient(225deg, $color-s3, $color-s1); }
 
+ .bg-secondary-light-gradient {
+   background-repeat: repeat-x;
+   background-image: linear-gradient(90deg, $color-s2, $color-s1); }
+
 .bg-primary-standout-gradient {
   background-repeat: repeat-x;
   background-image: linear-gradient(225deg, $color-p2, $color-p3); }
@@ -31,6 +35,10 @@
 .bg-primary-highlight-gradient {
   background-repeat: repeat-x;
   background-image: linear-gradient(225deg, $color-p2, $color-p1); }
+
+.bg-primary-secondary-gradient {
+   background-repeat: repeat-x;
+   background: linear-gradient(180deg, $color-p2, $color-s3); }
 
 .bg-standout-highlight-gradient {
   background-repeat: repeat-x;
