removed beta from the logo

--- a/src/_includes/modules/three-cards.html
+++ b/src/_includes/modules/three-cards.html
@@ -1,9 +1,9 @@
 <div class="container">
  <h2 class="p-t-1 p-b-3">What's new in V6</h2>
- <div class="row d-flex flex-wrap justify-content-md-center">
+ <div class="row">
   <div class="col-md-4 m-b-md p-3 outline-1-gray-200-hover">
 
-   <div class="h-100 d-flex flex-column bg-gray-100 bg-gray-50-hover pos-rel">
+   <div class="h-100 bg-gray-100 bg-gray-50-hover pos-rel">
 
 
     <div class="bg-primary-secondary-gradient p-a d-flex justify-content-center align-items-center">
@@ -24,7 +24,7 @@
   </div>
 
   <div class="col-md-4 m-b-md p-3 outline-1-gray-200-hover">
-   <div class="h-100 d-flex flex-column bg-gray-100 bg-gray-50-hover pos-rel">
+   <div class="h-100 bg-gray-100 bg-gray-50-hover pos-rel">
 
     <div class="bg-primary-secondary-gradient p-a d-flex justify-content-center align-items-center">
      <img class="p-4" src="/images/nav-icon.svg" alt="Image Description">
@@ -42,7 +42,7 @@
   </div>
 
   <div class="col-md-4 m-b-md p-3 outline-1-gray-200-hover">
-   <div class="h-100 d-flex flex-column bg-gray-100  bg-gray-50-hover pos-rel">
+   <div class="h-100 bg-gray-100  bg-gray-50-hover pos-rel">
 
     <div class="bg-primary-secondary-gradient p-a d-flex justify-content-center align-items-center">
      <img class="p-4" src="/images/refreshed-icon.svg" alt="Image Description">
