updated form elements

--- a/src/_includes/modules/form-checkbox.html
+++ b/src/_includes/modules/form-checkbox.html
@@ -1,23 +1,21 @@
 <!--checkboxes-->
 
-<h3 class="h4 mt-0 m-b-0">Which types of waste do you transport?</h3>
-<small class="m-b d-block">Select all that apply</small>
-
+<h3 class="h4 mt-0 m-b ">Pick one or more of these items:</h3>
 <div class="form-check m-b">
  <input class="form-check-input" type="checkbox" value="" id="animalCarcassesCheck">
  <label class="form-check-label" for="animalCarcassesCheck">
-  Waste from animal carcasses
+  Option 1
  </label>
 </div>
 <div class="form-check m-b">
  <input class="form-check-input" type="checkbox" value="" id="minesCheck">
  <label class="form-check-label" for="minesCheck">
-  Waste from mines or quarries
+  Option 2
  </label>
 </div>
 <div class="form-check m-b">
  <input class="form-check-input" type="checkbox" value="" id="farmCheck">
  <label class="form-check-label" for="farmCheck">
-  Farm or agricultural waste
+  Option 3
  </label>
 </div>
