--- a/src/_includes/modules/form-dropdown.html
+++ b/src/_includes/modules/form-dropdown.html
@@ -1,7 +1,7 @@
-<label for="Select" class="mb-1">Choose a car:</label>
+<label for="Select" class="mb-1">Custom select</label>
 <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" id="Select">
- <option selected>Buick</option>
- <option value="3">Chevrolet</option>
- <option value="2">Chrysler</option>
- <option value="1">Ford</option>
+ <option selected>Select an option</option>
+ <option value="3">Option 1</option>
+ <option value="2">Option 2</option>
+ <option value="1">Option 3</option>
 </select>
