--- a/src/_includes/modules/form-file-input.html
+++ b/src/_includes/modules/form-file-input.html
@@ -1,5 +1,5 @@
 <!--Custom file Input-->
-<label for="inputGroupFile02" class="mb-1">Upload your file:</label>
+<label for="inputGroupFile02" class="mb-1">Upload your file</label>
 <div class="input-group mb-3">
  <input type="file" class="form-control" id="inputGroupFile02">
 </div>
