--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -13,6 +13,7 @@
     <div id="skip-to-content">
         <a href="#main-content">Skip to Main Content</a>
     </div>
+    {% include "../modules/alert-banner-beta-feedback.html" %}
     {% if alert %}
       {% include alert %}
     {% endif %}
